# raspyrfm-client

./: .travis.yml  MANUAL.md  README.rst  example.py  example_search.py  example_simple.py  pyproject.toml  setup.py
.github/: dependabot.yml
.github/workflows/: python_publish.yaml  pythonpackage.yml
custom_components/: __init__.py
custom_components/raspyrfm/: __init__.py  binary_sensor.py  config_flow.py  const.py  entity.py  gateway.py  hub.py  learn.py  manifest.json  panel.py  storage.py  switch.py  websocket.py
custom_components/raspyrfm/frontend/: raspyrfm-panel.js
custom_components/raspyrfm/translations/: en.json
docs/: conf.py  index.rst
docs/source/: index.rst  modules.rst  raspyrfm_client.device.manufacturer.bat.rst  raspyrfm_client.device.manufacturer.brennenstuhl.rst  raspyrfm_client.device.manufacturer.elro.rst  raspyrfm_client.device.manufacturer.intertechno.rst  raspyrfm_client.device.manufacturer.intertek.rst  raspyrfm_client.device.manufacturer.mumbi.rst  raspyrfm_client.device.manufacturer.pollin_electronic.rst  raspyrfm_client.device.manufacturer.rev.rst  raspyrfm_client.device.manufacturer.rst  raspyrfm_client.device.manufacturer.universal.rst  raspyrfm_client.device.manufacturer.vivanco.rst  raspyrfm_client.device.rst  raspyrfm_client.rst
raspyrfm_client/: __init__.py  client.py
raspyrfm_client/device/: actions.py  base.py
raspyrfm_client/device/manufacturer/: manufacturer_constants.py
raspyrfm_client/device_implementations/: manufacturer_constants.py
tests/: automatic_tests.py  test_automatic_test.py
(+105 files in other folders)
